<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SKGA handicap</string>
    <string name="edit_message">Players number</string>
    <string name="button_send">Add</string>
    <string name="hint_text">Add SKGA number. Eg. 9811</string>
    <string name="hint_text_cfg">Add CGF number. Eg. 950806</string>
    <string name="add_button">Add</string>
    <string name="about_button">About</string>
    <string name="logo">Laurinka.com</string>
    <string name="edit_button">Edit</string>
    <string name="close_button">Back</string>
    <string name="delete_button">Delete selec.</string>
    <string name="by_skga">By SKGA players number</string>
    <string name="by_cgf">By CGF players number</string>
    <string name="no_names">No names.</string>
    <string name="search_by_name">By name of player</string>
    <string name="search_by_name_cgf">By name of CGF player</string>
      <string name="search_by_name_skga">By name of SKGA player</string>
    <string name="search_hint_text">Enter beginning of player\'s name. E.g. Marek</string>
    <string name="button_search">Search</string>
    <string name="edit_search">Player\'s name</string>
    <string name="records_button">Records</string>
    <string name="exit_button">Exit</string>
    <string name="title_myRecords">My records</string>
    <string name="title_editMyRecords">Edit my records</string>
    <string name="title_addRecord">Add a record</string>
    <string name="title_aboutApp">About CS handicap</string>
    <string name="backRecords_button">Back to my records</string>
    <string name="back_to_search_button">Back to Search</string>
    <string name="searching">Searching</string>
    <string name="select_all_button">Select all</string>
    <string name="min_2_characters">Type at least 2 characters</string>
    <string name="search_player_by">Search player by:</string>
    <string name="name">Name</string>
    <string name="number">Number *</string>
    <string name="number_explanation">* Number is displayed on the membership card.</string>
</resources>