<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/LayoutView">
    
    <ImageView
   	    android:id="@+id/logo"
   	    android:contentDescription="@string/app_name"
   	    style="@style/logo"
   	    />
    
    <TextView
        android:id="@+id/title"
        android:text="@string/title_editMyRecords"
        style="@style/Title"
    />

    <ListView
        android:id="@android:id/list"
        android:layout_below="@id/title"
        android:layout_above="@+id/action_bar"
        android:choiceMode="multipleChoice"
        style="@style/MainList" >
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_below="@id/title"
        android:layout_above="@+id/action_bar"
		style="@style/no_names"
        android:text="@string/no_names" />
        
    <LinearLayout
            android:id="@+id/action_bar"
            style="@style/action_bar">
    
	    <Button
	        android:id="@+id/select_all_button"
	        android:onClick="invert"
	        android:text="@string/select_all_button"
	        style="@style/Buttons.ActionBar.Main" />
	    
	    <Button
	        android:id="@+id/delete_button"
	        android:onClick="delete"
	        android:text="@string/delete_button"
	        style="@style/Buttons.ActionBar.Main" />
	    
	    <Button
	        android:onClick="close"
	        android:text="@string/close_button"
	        style="@style/Buttons.ActionBar.Main.Back" />
	    
	</LinearLayout>
</RelativeLayout>