<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                style="@style/LayoutView">
                
   	<ImageView
   	    android:id="@+id/logo"
   	    android:contentDescription="@string/app_name"
   	    style="@style/logo"
   	    />
                
    <TextView
        android:id="@+id/title"
        android:text="@string/title_myRecords"
        style="@style/Title"
        />

    <ListView
        android:id="@android:id/list"
        android:layout_below="@id/title"
        android:layout_above="@+id/action_bar"
        style="@style/MainList" >

    </ListView>
    
    
	<TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_above="@+id/act"
        android:text="@string/no_names"
        android:gravity="center_horizontal"
    />
        
     <LinearLayout
            android:id="@+id/action_bar"
            style="@style/action_bar">
            
        <Button 
                android:text="@string/add_button"
                android:onClick="add"
                android:id="@+id/add_button"
                style="@style/Buttons.ActionBar.Main.Add"
                />
        <Button 
                android:text="@string/edit_button"
                android:onClick="edit"
                android:id="@+id/edit_button"
                style="@style/Buttons.ActionBar.Main.Edit"
                />
        <Button 
                android:text="@string/close_button"
                android:onClick="close"
                android:id="@+id/back_to_menu_button"
                style="@style/Buttons.ActionBar.Main.Back"
                />
    </LinearLayout>
        
</RelativeLayout>