<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_hint_text"
            
            />
    <EditText android:id="@+id/edit_search"
              android:layout_height="wrap_content"
              android:hint="@string/edit_search"
              android:layout_width="fill_parent"
            />
    <Button
            android:id="@+id/searchButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:onClick="startSearch"/>
    <Button
            android:id="@+id/close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_button"
            android:onClick="close"/>
    
</LinearLayout>


