<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
    
    <ImageView android:id="@+id/logo_app"
            android:contentDescription="@string/app_name"
            android:background="@drawable/logo_app"
            style="@style/IntroLogoApp"
			 />

        <Button style="@style/IntroButtons"
                android:text="@string/records_button"
                android:onClick="view"
                android:id="@+id/records_button"
                android:layout_below="@id/logo_app"
                />

        <Button style="@style/IntroButtons"
                android:text="@string/about_button"
                android:onClick="about"
                android:id="@+id/about_button"
                android:layout_below="@id/records_button"
                />
        
        <Button style="@style/IntroButtons"
                android:text="@string/exit_button"
                android:onClick="close"
                android:id="@+id/exit_button"
                android:layout_below="@id/about_button"
                />  
</RelativeLayout>
